--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   
         <div class="card-content">
           <span class="card-content-desc clr-neutral-200">
-            A confirmation email has been sent to <em class="bold">ash@loremcompany.com</em>. 
+            A confirmation email has been sent to <em class="bold" id="success-email">ash@loremcompany.com</em>. 
             Please open it and click the button inside to confirm your subscription.
           </span>
         </div>
